[project]
name = "physicspy"
version = "0.1.0"
description = "A Python toolkit for numerical methods and interactive physics simulations."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Derartu Tolosa" }
]
license = { text = "MIT" }

dependencies = [
    "numpy",
    "matplotlib",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
